<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="activity_c_label">My Profile</string>
    <string name="activity_b_label">About ALC</string>
    <string name="track">Track</string>
    <string name="track_value">Android</string>
    <string name="country">Country</string>
    <string name="country_value">Kenya</string>
    <string name="email">Email</string>
    <string name="email_value">tukmogi@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_value">+254 727296203</string>
    <string name="slack_username">Slack Username</string>
    <string name="slack_username_value">\@Tukmen Mogoria</string>
    <string name="name_value">Tukmen Mogoria</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="loading">Loading...</string>
</resources>
