<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ActivityC">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:background="@color/colorPrimary"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/passport"
                app:civ_border_width="2dp"
                app:civ_border_color="#acacac"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name_value"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:fontFamily="@font/raleway"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container">

            <com.tukmogi.alc4phase1.DetailView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/track"
                app:value="@string/track_value" />

            <com.tukmogi.alc4phase1.DetailView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/country"
                app:value="@string/country_value" />

            <com.tukmogi.alc4phase1.DetailView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/email"
                app:value="@string/email_value" />

            <com.tukmogi.alc4phase1.DetailView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/phone_number"
                app:value="@string/phone_number_value" />

            <com.tukmogi.alc4phase1.DetailView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/slack_username"
                app:value="@string/slack_username_value" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>